change logo and css

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  background: url('../img/bodyBackground.png') no-repeat center / cover, black;
+  background: url('../img/bodyBackground.png') no-repeat center / cover, #005491;
   font-family: 'Helvetica', sans-serif;
   box-sizing: border-box;
 
