--- a/src/components/Heading/styles.module.scss
+++ b/src/components/Heading/styles.module.scss
@@ -23,7 +23,7 @@
     text-transform: uppercase;
     margin-bottom: 8px;
     letter-spacing: 0.1em;
-    color: #9ba5b4;
+    color: #dadcde;
   }
 
   .contract {
