--- a/src/components/Stake/styles.module.scss
+++ b/src/components/Stake/styles.module.scss
@@ -35,7 +35,7 @@
 
   .panel {
     background: rgba(36, 37, 38, 0.5);
-    border: 1px solid #49494d;
+    border: 1px solid #fff;
     box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.12);
     border-radius: 12px;
     padding: 0 30px 30px;
