--- a/src/components/Layout/Navbar/styles.module.scss
+++ b/src/components/Layout/Navbar/styles.module.scss
@@ -13,7 +13,7 @@
     font-size: 24px;
     font-weight: 300;
     text-decoration: none;
-    color: #9ba5b4;
+    color: #fff;
     display: none;
 
     @media (min-width: 1200px) {
@@ -72,7 +72,7 @@
     cursor: pointer;
 
     &:last-child {
-      color: #808ea3;
+      color: #fff;
     }
   }
 
@@ -88,7 +88,7 @@
       height: 15px;
 
       path {
-        fill: #808ea3;
+        fill: #fff;
       }
     }
   }
