--- a/src/pages/Unlock/styles.module.scss
+++ b/src/pages/Unlock/styles.module.scss
@@ -9,7 +9,7 @@
 
   .wrapper {
     background: rgba(0, 6, 13, 0.2);
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid #fff;
     box-sizing: border-box;
     border-radius: 12px;
     display: flex;
@@ -24,8 +24,8 @@
     }
 
     .logo {
-      background: #303234;
-      border: 1px solid #49494d;
+      background: #003e79;
+      border: 1px solid #fff;
       box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
       border-radius: 50%;
       justify-content: center;
@@ -47,7 +47,7 @@
     .description {
       line-height: 1;
       font-size: 18px;
-      color: #808ea3;
+      color: #acc7ef;
     }
 
     .connects {
@@ -71,7 +71,7 @@
       .connect {
         cursor: pointer;
         background: rgba(36, 37, 38, 0.5);
-        border: 1px solid #49494d;
+        border: 1px solid #fff;
         box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.12);
         border-radius: 12px;
         width: 160px;
@@ -82,7 +82,7 @@
         margin: 0 0.5rem 1rem;
 
         &:hover {
-          background: #303234;
+          background: #003e79;
         }
 
         &:not(:last-child) {
@@ -90,7 +90,7 @@
         }
 
         .title {
-          color: rgba(#808ea3, 0.9);
+          color: #bed4f5e6;
           margin-bottom: 15px;
           font-size: 12px;
           line-height: 1;
